--- a/randomquotemachine.css
+++ b/randomquotemachine.css
@@ -59,6 +59,6 @@ button:hover {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: -85px;
+	margin-top: 0%;
 	font-size: 40px
 }
